--- a/PositionalEncodingExample.ipynb
+++ b/PositionalEncodingExample.ipynb
@@ -5,7 +5,7 @@
    "id": "0b287d40",
    "metadata": {},
    "source": [
-    "The Answer for question 1:\n",
+    "## The Answer for question 1:\n",
     "\n",
     "Positional information degradation in deep Transformer architectures is a well-documented issue in the literature. When absolute positional encodings—such as the sinusoidal embeddings introduced by Vaswani et al. (2017)—are added only at the input layer, their signal can diminish across layers as the network deepens. Each self-attention layer mixes token representations, and without reinforcement mechanisms, later layers tend to focus more on semantic or contextual content, effectively treating the sequence as a bag of words if the positional cues fade or become entangled . Although residual connections are intended to propagate input information forward, empirical studies (Dufter et al., 2022) show that position information is often attenuated or overridden by attention patterns that prioritize token meaning over position .\n",
     "\n",
