--- a/PositionalEncodingExample.ipynb
+++ b/PositionalEncodingExample.ipynb
@@ -33,7 +33,7 @@
    "id": "4cf2ec65",
    "metadata": {},
    "source": [
-    "The Answer for question 2:"
+    "## The Answer for question 2:"
    ]
   },
   {
