--- a/PositionalEncodingExample.ipynb
+++ b/PositionalEncodingExample.ipynb
@@ -33,7 +33,7 @@
    "id": "4cf2ec65",
    "metadata": {},
    "source": [
-    "The Answer for question 2:"
+    "## The Answer for question 2:"
    ]
   },
   {
@@ -246,7 +246,25 @@
     "\n",
     "---\n",
     "\n",
-    "### 3️⃣ Rotary Positional Embedding (RoPE)\n",
+    "### 3️⃣ Learnable Positional Embedding initiated by Sinusoidal encodings\n",
+    "\n",
+    "```python\n",
+    "class LearnablePE(nn.Module):\n",
+    "    def __init__(self, d_model, max_len=5000):\n",
+    "        ...\n",
+    "```\n",
+    "\n",
+    "- Here, positional encodings are **learned parameters**, like word embeddings.\n",
+    "- An `nn.Embedding` layer maps each position index to a trainable vector.\n",
+    "- This approach allows the model to **adapt the encoding to the data**, which may improve performance on in-distribution tasks.\n",
+    "- However, it often struggles to **generalize to longer sequences** than those seen during training.\n",
+    "\n",
+    "💡 Good for: classification tasks or short sequences  \n",
+    "⚠️ Weak at: extrapolation to unseen lengths\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 4️⃣ Rotary Positional Embedding (RoPE)\n",
     "\n",
     "```python\n",
     "class RoPEAttention(nn.Module):\n",
@@ -290,7 +308,7 @@
     "\n",
     "\n",
     "---\n",
-    "### 4️⃣ Learnable Rotary Positional Embedding (Learnable RoPE)\n",
+    "### 5️⃣ Learnable Rotary Positional Embedding (Learnable RoPE)\n",
     "\n",
     "This module extends the classic **RoPE (Rotary Positional Embedding)** by introducing **trainable frequency scaling parameters**, making the position encoding mechanism adaptive to the training data.\n",
     "\n",
@@ -359,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "7be917f8",
    "metadata": {},
    "outputs": [],
@@ -392,7 +410,7 @@
     "        super().__init__()\n",
     "        self.pe = nn.Embedding(max_len, d_model)\n",
     "\n",
-    "        # 生成 sinusoidal encoding\n",
+    "        # sinusoidal encoding\n",
     "        pe = torch.zeros(max_len, d_model)\n",
     "        position = torch.arange(0, max_len).unsqueeze(1).float()\n",
     "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-np.log(10000.0) / d_model))\n",
@@ -400,9 +418,9 @@
     "        pe[:, 0::2] = torch.sin(position * div_term)\n",
     "        pe[:, 1::2] = torch.cos(position * div_term)\n",
     "\n",
-    "        # 设置为 embedding 的初始权重\n",
+    "        # set the embedding's initial weights\n",
     "        self.pe.weight.data.copy_(pe)\n",
-    "        self.pe.weight.requires_grad = True  # 可训练\n",
+    "        self.pe.weight.requires_grad = True  # learnable\n",
     "\n",
     "    def forward(self, x):\n",
     "        batch_size, seq_len, _ = x.size()\n",
@@ -583,6 +601,25 @@
     "            optimizer.step()\n",
     "    end_time = time.time()\n",
     "    return model, end_time - start_time\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec51f932",
+   "metadata": {},
+   "source": [
+    "### 🔍 Model Evaluation\n",
+    "\n",
+    "We evaluate model performance using the **average cross-entropy loss** over the test dataset. During evaluation:\n",
+    "\n",
+    "- The model is switched to evaluation mode (`model.eval()`), which disables dropout and other training-specific behaviors.\n",
+    "- For each batch in the test loader:\n",
+    "  - Inputs and targets are moved to the evaluation device (CPU/GPU).\n",
+    "  - The model generates predictions.\n",
+    "  - Cross-entropy loss is computed between predictions and ground truth labels.\n",
+    "- The final loss is averaged over all tokens to obtain a stable **average test loss**, which we use to compare different positional encoding strategies.\n",
+    "\n",
+    "Evaluation is done with `torch.no_grad()` to avoid gradient computations and reduce memory usage.\n"
    ]
   },
   {
