--- a/PositionalEncodingExample.ipynb
+++ b/PositionalEncodingExample.ipynb
@@ -248,19 +248,7 @@
     "\n",
     "### 3️⃣ Learnable Positional Embedding initiated by Sinusoidal encodings\n",
     "\n",
-    "```python\n",
-    "class LearnablePE(nn.Module):\n",
-    "    def __init__(self, d_model, max_len=5000):\n",
-    "        ...\n",
-    "```\n",
-    "\n",
-    "- Here, positional encodings are **learned parameters**, like word embeddings.\n",
-    "- An `nn.Embedding` layer maps each position index to a trainable vector.\n",
-    "- This approach allows the model to **adapt the encoding to the data**, which may improve performance on in-distribution tasks.\n",
-    "- However, it often struggles to **generalize to longer sequences** than those seen during training.\n",
-    "\n",
-    "💡 Good for: classification tasks or short sequences  \n",
-    "⚠️ Weak at: extrapolation to unseen lengths\n",
+    "- This often provides a stable starting point and faster convergence than randomly initialized embeddings.\n",
     "\n",
     "---\n",
     "\n",
@@ -774,8 +762,8 @@
     "  - `'rope'` – Rotary Positional Embedding (applied to Q/K rotation)\n",
     "  - `'lrope'` – Learnable RoPE (with parameterized frequency scaling)\n",
     "  - `'sininit'` – Sinusoidal-initialized learnable embeddings\n",
-    "- **Model Depths**: {1, 2, 4, 8, 16, 32} Transformer encoder layers\n",
-    "- **Epochs Tested**: {1, 4, 16, 64, 256}\n",
+    "- **Model Depths**: {1, 4, 16} Transformer encoder layers\n",
+    "- **Epochs Tested**: {1, 4, 16}\n",
     "\n",
     "---\n",
     "\n",
